<resources>
    <string name="app_name">Hola</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!--Button texts-->
    <string name="settings_activity_title">Settings</string>
    <string name="setting_text">Settings</string>
    <string name="login_text">Login</string>
    <string name="send_message_text">Send message</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="authentication_header">Authentication</string>
    <string name="authentication_header_key">Authentication_key</string>

    <!-- Authentication Preferences -->
    <string name="biometric_title">Use Fingerprint</string>
    <string name="biometric_key">biometric_authentication</string>


    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="person_name">Person name</string>

    <!-- Constants -->
    <string name="user_name">Username:</string>
    <string name="enter_user_name_hint">Enter username here:</string>
    <string name="enter_receiver_hint">Send Message to:</string>
    <string name="enter_message_hint">Enter Message here:</string>
</resources>