<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header"
        app:isPreferenceVisible="false">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="@string/authentication_header_key"
        app:title="@string/authentication_header">

        <SwitchPreferenceCompat
            app:key="@string/biometric_key"
            app:title="@string/biometric_title" />

    </PreferenceCategory>

</PreferenceScreen>